--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
 			</div>
 		</div>
 		
-		
+		<button ng-init="shouldShow = true" ng-click="shouldShow = !shouldShow">Flip the shouldShow variable</button>
+			<div ng-show="shouldShow">
+					<h3>Showing {{ shouldShow }}</h3>
+			</div>
+		<div ng-hide="shouldShow">
+			<h3>Hiding {{ shouldShow }}</h3>
+		</div>
 
 	</div>
 	
