--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body style="background-color:blue;">
+  <body>
   <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid" >
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,20 +45,23 @@
 	<h3>These are opportunities for you to work over the summer</h3>
 	<div class="container" style="display: block; " >
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="display: block;">
-			<div class="panel" style="display: block;">
-			<h2>about me</h2>
-				<div class="buttons" style="display: block;"> 
-					<a href="my-work.html" class="btn btn-lg btn-default">View my work</a>
-					<br>
-					<a href="bio.html" class="btn btn-lg btn-primary">More about me</a>
-					<br> 
-					<a href="jonathanjemson-resume.pdf" target="_blank" class="btn btn-lg btn-danger">View my résumé</a>
-				</div>
+			<div class="panel" style="display: block;" >
+			<h2 align = center>Job</h2>
+				
+					<div align=center class="buttons" style="display: block;"> 
+						<a href="#" class="btn btn-lg btn-default">more information</a>
+						<br>
+					</div>
+				
 			</div>
 		</div>
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="display: block;">
-			<div class="panel quote-panel" style="display: block;"> 
-				<h2>favorite quote</h2>
+			<div class="panel" style="display: block;"> 
+				<h2 align = center>Another Job</h2>
+				<div align=center class="buttons" style="display: block;"> 
+						<a href="#" class="btn btn-lg btn-default">more information</a>
+						<br>
+					</div>
 			</div> 
 		</div> 
 	</div>
