--- a/submit.html
+++ b/submit.html
@@ -27,13 +27,13 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">Milton Bulletin Board</a>
+      <a class="navbar-brand">Milton Bulletin Board</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="index.html">Jobs</a></li>
+        <li><a href="index.html">Jobs and Internships</a></li>
         <li ><a href="summer.html">Summer Opportunities</a></li>
 		<li class="active"><a href="submit.html">Submit an ad</a></li>        
       </ul>      
@@ -41,7 +41,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-    <h1>From this page, you can submit your own ads to be posted.</h1>
 	
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
