--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 			<div class="panel" style="display: block;" >
 				
 					<div align=center class="buttons" style="display: block;"> 
-						<a href="#" class="btn btn-lg btn-default">more information</a>
+						<a href="#" class="btn btn-lg btn-default" > More Info</a>
+
 						<br>
 					</div>
 				
