--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 			<div class="panel" style="display: block;" >
 				
 					<div align=center class="buttons" style="display: block;"> 
-						<a href="#" class="btn btn-lg btn-default" > More Info</a>
+						<a class="btn btn-lg btn-default" style = "height: 200px" data-toggle="modal" data-target="#myModal" > More Info</a>
 						
 
 						<br>
@@ -55,7 +55,25 @@
 			</div>
 		</div>
 		
-		
+	</div>
+<!-- Modal -->
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+	  <div class="modal-dialog">
+		<div class="modal-content">
+		  <div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+			<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+		  </div>
+		  <div class="modal-body">
+			<p> Company information </p>
+		  </div>
+		  <div class="modal-footer">
+			<button type="button" align = center class="btn btn-default" >Go Apply</button>
+			<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
+		  </div>
+		</div>
+	  </div>
+	</div>	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
