--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-
+	
 	<div class="container" style="display: block; " >
+	<!--To Create New ad Copy from here-->
 		<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="display: block;">
 			<div class="panel" style="display: block;" >
 				
@@ -72,7 +73,7 @@
 				</div>
 			</div>	
 		</div>
-		
+	<!--To Here-->
 	</div>
 <!-- Modal -->
 	
