removed custom form and added google form

--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
 			<div class="panel" style="display: block;" >
 				
 					<div align=center class="buttons" style="display: block;"> 
-						<a class="btn btn-lg btn-default" style = "height: 200px" data-toggle="modal" data-target="#Modal1" > More Info</a>
+						<a class="btn btn-lg btn-default job-button" style = "background-image: url('media/usa-mgmt.png');" data-toggle="modal" data-target="#Modal1" >
+						<p class = "btn-text">
+						More information
+						</p>
+						</a>
+						
 						<br>
 					</div>
 			</div>
