--- a/submit.html
+++ b/submit.html
@@ -42,7 +42,7 @@
 </nav>
 
 	<div class="container" style="display: block; " >
-		<form role="form" class="adForm">
+		<!--<form role="form" class="adForm">
 			  <div class="form-group">
 				<label for="name">Name</label>
 				<input type="text" class="form-control" id="name" placeholder="Enter Your Name">
@@ -100,8 +100,8 @@
 			  </div>
 
 			  
-			  <button type="submit" class="btn btn-default">Submit</button>
-		</form>
+			  <button type="submit" class="btn btn-default">Submit</button> 
+		</form>-->
 		<!--<iframe src="https://docs.google.com/forms/d/1dGZ9RO_l2qIde3Mlal_J4uRwvK8VtAVOu_8yBi3yA3M/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
 	</div>
 
