--- a/submit.html
+++ b/submit.html
@@ -102,7 +102,7 @@
 			  
 			  <button type="submit" class="btn btn-default">Submit</button> 
 		</form>-->
-		<!--<iframe src="https://docs.google.com/forms/d/1dGZ9RO_l2qIde3Mlal_J4uRwvK8VtAVOu_8yBi3yA3M/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
+		<iframe src="https://docs.google.com/forms/d/1dGZ9RO_l2qIde3Mlal_J4uRwvK8VtAVOu_8yBi3yA3M/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
