--- a/index.html
+++ b/index.html
@@ -62,64 +62,18 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title" id="myModalLabel">Modal title</h4>
+							<h4 class="modal-title" id="myModalLabel">USA Management</h4>
 						</div>
 						<div class="modal-body">
-							<p> Company information </p>
-						</div>
-						<div class="modal-footer">
-							<button type="button" align = center class="btn btn-default" >Go Apply</button>
-							<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>	
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
-			<div class="panel" style="display: block;" >
-				
-					<div align=center class="buttons" style="display: block;"> 
-						<a class="btn btn-lg btn-default" style = "height: 200px" data-toggle="modal" data-target="#Modal2" > More Info</a>
-						<br>
-					</div>
-			</div>
-			
-			<div class="modal fade" id="Modal2" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-						</div>
-						<div class="modal-body">
-							<p> Company information </p>
-						</div>
-						<div class="modal-footer">
-							<button type="button" align = center class="btn btn-default" >Go Apply</button>
-							<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
-						</div>
-					</div>
-				</div>
-			</div>	
-		</div>
-		<div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
-			<div class="panel" style="display: block;" >
-				
-					<div align=center class="buttons" style="display: block;"> 
-						<a class="btn btn-lg btn-default" style = "height: 200px" data-toggle="modal" data-target="#Modal3" > More Info</a>
-						<br>
-					</div>
-			</div>
-			
-			<div class="modal fade" id="Modal3" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-				<div class="modal-dialog">
-					<div class="modal-content">
-						<div class="modal-header">
-							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title" id="myModalLabel">Modal title</h4>
-						</div>
-						<div class="modal-body">
-							<p> Company information </p>
+							<h2>Description</h2>
+							<p> For over 30 years, USA Management has been managing numerous aquatic facilities. Currently, human resources have been hiring young adults interested in obtaining a job this summer. Although we hire many high school-college age students, we encourage youth leaders, and individuals currently in an education field (Coaches, Teachers, etc) to apply as well. Due to the seasonality of a lifeguard position, many individuals find working for USA Management during the summer beneficial while working in education. </p>
+							<h2>Requirements</h2>
+							<ul>
+								<li>3.0 GPA</li>
+								<li>Involved in extracurricular activities.</li>
+								<li>CPR and life Guard Certified by April 2014</li>
+							</ul>
+							<h2>Contact</h2>
 						</div>
 						<div class="modal-footer">
 							<button type="button" align = center class="btn btn-default" >Go Apply</button>
@@ -131,6 +85,7 @@
 		</div>
 		
 	<!--To Here-->
+	
 	</div>
 <!-- Modal -->
 	
