--- a/index.html
+++ b/index.html
@@ -62,21 +62,21 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h4 class="modal-title" id="myModalLabel">USA Management</h4>
+							<h2 class="modal-title" id="myModalLabel">USA Management</h2>
 						</div>
 						<div class="modal-body">
-							<h2>Description</h2>
-							<p> For over 30 years, USA Management has been managing numerous aquatic facilities. Currently, human resources have been hiring young adults interested in obtaining a job this summer. Although we hire many high school-college age students, we encourage youth leaders, and individuals currently in an education field (Coaches, Teachers, etc) to apply as well. Due to the seasonality of a lifeguard position, many individuals find working for USA Management during the summer beneficial while working in education. </p>
-							<h2>Requirements</h2>
+							<h3>Description</h3>
+							<p> For over 30 years, USA Management has been managing numerous aquatic facilities. Currently, human resources have been hiring young adults interested in obtaining a job this summer. Although we hire many high school-college age students, we encourage youth leaders, and individuals currently in an education field (Coaches, Teachers, etc) to apply as well. Due to the seasonality of a lifeguard position, many individuals find working for USA Management during the summer beneficial while working in education. Available positions include aquatic director, pool manager, lifeguards, concessions, admissions, and swim instructors. We offer full and part time hours, excellent wages, and flexible schedules.</p>
+							<h3>Requirements</h3>
 							<ul>
 								<li>3.0 GPA</li>
 								<li>Involved in extracurricular activities.</li>
 								<li>CPR and life Guard Certified by April 2014</li>
 							</ul>
-							<h2>Contact</h2>
+							<h3>How to Apply</h3>
+							<h3>Contact</h3>
 						</div>
 						<div class="modal-footer">
-							<button type="button" align = center class="btn btn-default" >Go Apply</button>
 							<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
 						</div>
 					</div>
