--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 						</div>
 						<div class="modal-body">
 							<h3>Description</h3>
-							<p> For over 30 years, USA Management has been managing numerous aquatic facilities. Currently, human resources have been hiring young adults interested in obtaining a job this summer. Although we hire many high school-college age students, we encourage youth leaders, and individuals currently in an education field (Coaches, Teachers, etc) to apply as well. Due to the seasonality of a lifeguard position, many individuals find working for USA Management during the summer beneficial while working in education. Available positions include aquatic director, pool manager, lifeguards, concessions, admissions, and swim instructors. We offer full and part time hours, excellent wages, and flexible schedules.</p>
+								<p> For over 30 years, USA Management has been managing numerous aquatic facilities. Currently, human resources have been hiring young adults interested in obtaining a job this summer. Although we hire many high school-college age students, we encourage youth leaders, and individuals currently in an education field (Coaches, Teachers, etc) to apply as well. Due to the seasonality of a lifeguard position, many individuals find working for USA Management during the summer beneficial while working in education. Available positions include aquatic director, pool manager, lifeguards, concessions, admissions, and swim instructors. We offer full and part time hours, excellent wages, and flexible schedules.</p>
 							<h3>Requirements</h3>
 							<ul>
 								<li>3.0 GPA</li>
@@ -74,7 +74,15 @@
 								<li>CPR and life Guard Certified by April 2014</li>
 							</ul>
 							<h3>How to Apply</h3>
+								<p>Apply online at www.usamanagement.com or call (877) 248-1872.</p>
 							<h3>Contact</h3>
+									<p>USA Management
+									</br>Phone: (877) 248-1872
+									</br>Address: 1073 Green Street Roswell, GA 30075
+									</br>Website: <a href="www.usamanagement.com">www.usamanagement.com</a>
+									</br>We also have Facebook, Twitter, Pinterest, and Instagram pages
+								</p>
+								
 						</div>
 						<div class="modal-footer">
 							<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
