Changed image and slight formatting

--- a/summer.html
+++ b/summer.html
@@ -90,7 +90,7 @@
 			<div class="panel" style="display: block;" >
 				
 					<div align=center class="buttons" style="display: block;"> 
-						<a class="btn btn-lg btn-default job-button" style = "background-image: url('media/makegames.png');" data-toggle="modal" data-target="#Modal2" >
+						<a class="btn btn-lg btn-default job-button" style = "background-image: url('media/makegames.png');  background-size: 70%;" data-toggle="modal" data-target="#Modal2" >
 						<p class = "btn-text">
 						</p>
 						</a>
