--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						</div>
 						<div class="modal-body">
 							<h3>Description</h3><!--Description-->
-								<p></p>
+								<p>Playtabase is excited that you are interested in applying to be a CODE2040 Fellow! If you're an awesome coder, an undergraduate or graduate student returning to school in fall 2014, and you're interested in a fast-paced software development internship at a top tech company, then you're in the right place! Your summer will consist of a software development internship with a top tech company, individual mentoring, a speaker series, workshops, coaching, and more. Come meet executives at tech powerhouses like Google and Facebook, pick the brains of partners at leading venture firms, and get mentored by founders and senior engineers, all while pushing code at a top Silicon Valley company.</p>
 							<h3>Requirements</h3><!--Requirements-->
 							<ul>
 								<li>Currently in college or grad school</li>
