Fixed navbar to top

--- a/summer.html
+++ b/summer.html
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
   <body>
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -40,7 +40,7 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-	<div class="container" style="display: block; " >
+	<div class="container" style="display: block;  padding-top: 70px;" >
 	<!--To Create New ad Copy from here-->
 		<div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
 			<div class="panel" style="display: block;" >
