--- a/submit.html
+++ b/submit.html
@@ -17,7 +17,7 @@
     <![endif]-->
   </head>
   <body>
-  <nav class="navbar navbar-default" role="navigation">
+  <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -41,7 +41,7 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-	<div class="container" style="display: block; " >
+	<div class="container" style="display: block; padding-top: 70px " >
 		<!--<form role="form" class="adForm">
 			  <div class="form-group">
 				<label for="name">Name</label>
