--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
 									</br>Phone 2: (770) 560-2287
 									</br>Phone 3: (770) 594-9765
 									</br> Email: caitlin.mcquade@atlanta-pmg.com
-									</br>Website: <a target="_blank" href="http://www.AMSpoolsGA.com"> www.AMSpoolsGA.com</a>								
+									</br>Website: <a target="_blank" href="http://atlanta-pmg.com/">www.atlanta-pmg.com</a>								
 									</p>
 								
 						</div>
