--- a/submit.html
+++ b/submit.html
@@ -103,6 +103,14 @@
 			  <button type="submit" class="btn btn-default">Submit</button> 
 		</form>-->
 		<iframe src="https://docs.google.com/forms/d/1dGZ9RO_l2qIde3Mlal_J4uRwvK8VtAVOu_8yBi3yA3M/viewform?embedded=true" width="760" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	<nav class="navbar navbar-default navbar-fixed-bottom" style="text-align:center;" role="navigation">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <center><div class="navbar-header" style="color:white; align:center;">
+      <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
+    </div></center>
+  </div><!-- /.container-fluid -->
+</nav>
 	</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
