--- a/index.html
+++ b/index.html
@@ -432,16 +432,16 @@
 			</div>	
 		</div>
 		<!--Place Here-->
-		<nav class="navbar navbar-default navbar-fixed-bottom" style="text-align:center;" role="navigation">
+		
+	</div>
+	<nav class="navbar" style="text-align:center; " role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <center><div class="navbar-header" style="color:white; align:center;">
+    <center><div class="navbar navbar-default navbar-fixed-bottom" style="color:white; background-color: #fe0e18; align:center;">
       <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
     </div></center>
   </div><!-- /.container-fluid -->
 </nav>
-	</div>
-	
 <!-- Modal -->
 	
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
