Few cosmetic tweaks bc i didnt want to do homework

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
 			<div class="panel" style="display: block;" >
 				
 					<div align=center class="buttons" style="display: block;"> 
-						<a class="btn btn-lg btn-default job-button" style = "background-image: url('media/golf.png');" data-toggle="modal" data-target="#Modal4" ><!--Background Image and Modal Id-->
+						<a class="btn btn-lg btn-default job-button" style = "background-image: url('media/golf.png'); background-size: 40%;" data-toggle="modal" data-target="#Modal4" ><!--Background Image and Modal Id-->
 						<div style="vertical-align:bottom;">
 						<h4 class = "btn-text" style="position:relative; top: 190px;"><!--Short Description-->
 								Atlanta National </br>Golf Club
@@ -437,7 +437,7 @@
 	<nav class="navbar" style="text-align:center; " role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <center><div class="navbar navbar-default navbar-fixed-bottom" style="color:white; align:center;">
+    <center><div class="navbar  navbar-fixed-bottom" style="color:white; align:center; background-color: #FF9898; ">
       <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
     </div></center>
   </div><!-- /.container-fluid -->
