--- a/submit.html
+++ b/submit.html
@@ -108,7 +108,7 @@
 	<nav class="navbar" style="text-align:center; " role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <center><div class="navbar navbar-default navbar-fixed-bottom" style="color:white; background-color: #fe0e18; align:center;">
+    <center><div class="navbar navbar-fixed-bottom" style="color:white; background-color: #ff9898; align:center;">
       <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
     </div></center>
   </div><!-- /.container-fluid -->
