--- a/index.html
+++ b/index.html
@@ -318,8 +318,8 @@
 								<p> A responsible senior is needed to drive a student home two days a week after school.</p>
 							<h3>Requirements</h3><!--Requirements-->
 							<ul>
-								<li>Responsible</li>
-								<li>Senior</li>
+								<li>Responsible senior</li>
+								<li>Free two days a week</li>
 							</ul>
 							<h3>How to Apply</h3><!--Apply-->
 								<p>Contact Debra Finkler at (917) 414-6543</p>
