modified disclaimer bar

--- a/summer.html
+++ b/summer.html
@@ -146,7 +146,7 @@
 	<nav class="navbar" style="text-align:center; " role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
-    <center><div class="navbar  navbar-fixed-bottom" style="color:white; align:center; background-color: #FF9898 ">
+    <center><div class="navbar " style="color:white; align:center; background-color: #FF9898; border-radius: 0;">
       <h5 style="text-align: center; align:center;">Milton High School provides this list as a service. We are not responsible in any way for any person or company who advertises on this site.</h5>
     </div></center>
   </div><!-- /.container-fluid -->
