--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h2 class="modal-title" id="myModalLabel"> AMS Pools</h2><!--Popup Header-->
+							<h2 class="modal-title" id="myModalLabel"> SwimAtlanta Pool Maagement</h2><!--Popup Header-->
 						</div>
 						<div class="modal-body">
 							<h3>Description</h3><!--Description-->
@@ -414,7 +414,7 @@
 								<li>Respectful</li>
 							</ul>
 							<h3>Contact</h3><!--Contact-->
-									<p>SwimAtlanta Pool Maagement
+									<p>SwimAtlanta Pool Management
 									</br>Caitlin McQuade
 									</br>Phone: (770) 992-7655 ext. 103
 									</br>Phone 2: (770) 560-2287
