--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
 					<div class="modal-content">
 						<div class="modal-header">
 							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-							<h2 class="modal-title" id="myModalLabel"> SwimAtlanta Pool Maagement</h2><!--Popup Header-->
+							<h2 class="modal-title" id="myModalLabel"> SwimAtlanta Pool Management</h2><!--Popup Header-->
 						</div>
 						<div class="modal-body">
 							<h3>Description</h3><!--Description-->
