--- a/index.html
+++ b/index.html
@@ -521,6 +521,58 @@
 				</div>
 			</div>	
 		</div>
+		
+		<div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
+			<div class="panel" style="display: block;" >		
+					<div align=center class="buttons" style="display: block;"> 
+						<a class="btn btn-lg btn-default job-button"  data-toggle="modal" data-target="#Modal1" ><!--Background Image and Modal Id-->
+						<div >
+							<h4 class = "btn-text" style="position:relative; top: 190px;">
+								Atria Senior Living
+							</h4>
+						</div>
+						</a>						
+						<br>
+					</div>
+			</div>	
+			<div class="modal fade" id="Modal12" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true"><!--Change Modal ID-->
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+							<h2 class="modal-title" id="myModalLabel">Job Fair Atria Senior Living</h2><!--Popup Header-->
+						</div>
+						<div class="modal-body">
+							<h3>Description</h3><!--Description-->
+								<p> People are living longer. 
+At Atria Senior Living, we’re helping them live better.</p>
+								<p>Have you ever wanted a job that makes a difference in the lives of others? Do you enjoy building relationships with the people you are helping at work? Atria Senior Living is looking for people just like you! </p>
+								<p> JOB FAIR
+Thursday, May 15th
+8:00am – 4:00 p.m.</p>
+								<p> Current Openings: </br>
+Concierge Housekeepers Waitstaff / Server Cooks Dishwashers </p>
+								<a href="http://vimeo.com/87218733	" target="_blank">http://vimeo.com/87218733	</a>
+							<h3>Requirements</h3><!--Requirements-->
+							<ul>
+								<li>Must be 18 years or older to apply</li>
+							</ul>
+							<h3>How to Apply</h3><!--Apply-->
+								<p>If you cannot attend the Career Fair, please email your resume to tgrieco@somerbyliving.com</p>
+							<h3>Contact</h3><!--Contact-->
+									<p>Atria Senior Living
+									</br>Phone: (770) 650-9577
+									</br>Address: 100 Somerby Dr, Alpharetta, GA 30009
+									</br>Website: <a href="www.atriaseniorliving.com " target="_blank">www.atriaseniorliving.com </a>
+								</p>						
+						</div>
+						<div class="modal-footer">
+							<button type="button" align = center class="btn btn-default" data-dismiss="modal">Close</button>
+						</div>
+					</div>
+				</div>
+			</div>	
+		</div>
 		<!--Place Here-->
 		
 	</div>
