--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 		<div class="col-lg-4 col-md-4 col-sm-4" style="display: block;">
 			<div class="panel" style="display: block;" >		
 					<div align=center class="buttons" style="display: block;"> 
-						<a class="btn btn-lg btn-default job-button"  data-toggle="modal" data-target="#Modal1" style = "background-image: url('media/atria.jpg'); background-size: 70%;" ><!--Background Image and Modal Id-->
+						<a class="btn btn-lg btn-default job-button"  data-toggle="modal" data-target="#Modal12" style = "background-image: url('media/atria.jpg'); " ><!--Background Image and Modal Id-->
 						<div >
 							<h4 class = "btn-text" style="position:relative; top: 190px;">
 								Atria Senior Living
